--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,23 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
         {
             "name": "Launch Package",
             "type": "go",
             "request": "launch",
             "mode": "debug",
             "program": "${workspaceFolder}"
-        }
+        },
+
+                {
+            "name": "Connect to server",
+            "type": "go",
+            "request": "attach",
+            "mode": "remote",
+            "remotePath": "${workspaceFolder}",
+            "port": 3020,
+            "host": "127.0.0.1"
+        },        
     ]
 }
